--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,12 +7,16 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>{{ title }}</h1>
-<hr>
 
+
+<app-dbz-main-page></app-dbz-main-page>
+
+  <!-- <h1>{{ title }}</h1> -->
+<!-- <hr> -->
+<!--
 <app-counter></app-counter>
 
 <app-heroes-hero></app-heroes-hero>
-<app-heroes-list></app-heroes-list>
+<app-heroes-list></app-heroes-list> -->
 </body>
 </html>
