--- a/src/app/dbz/pages/main-page.component.html
+++ b/src/app/dbz/pages/main-page.component.html
@@ -12,14 +12,12 @@
     <div class="row">
       <div class="col">
         <dbz-list
-          [characterList]="dbzService.character"
-          (onDelete)="dbzService.onDeleteById($event)"
+          [characterList]="character"
+          (onDelete)="onDeleteById($event)"
         ></dbz-list>
       </div>
       <div class="col">
-        <form-dbz
-          (onNewCharacter)="dbzService.onNewCharacter($event)"
-        ></form-dbz>
+        <form-dbz (onNewCharacter)="onNewCharacter($event)"></form-dbz>
       </div>
     </div>
   </body>
